--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:hint="Email Id"
+            android:inputType="textEmailAddress"
             android:layout_marginTop="10dp"
             android:textColor="#ffffff"/>
 
@@ -63,7 +64,7 @@
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login/Register"
+            android:text="Login"
             android:padding="10dp"
             android:textSize="20dp"
             android:layout_gravity="center"/>
