--- a/app/src/main/res/layout/activity_volunteer_start.xml
+++ b/app/src/main/res/layout/activity_volunteer_start.xml
@@ -12,7 +12,9 @@
         android:id="@+id/volunteer_start_background_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:contentDescription=""
+        tools:ignore="ContentDescription" />
 
 
     </FrameLayout>
@@ -25,16 +27,16 @@
         android:background="#000000"
         android:alpha="0.8"></android.support.v7.widget.RecyclerView>
 
-    <ImageButton
+    <ImageView
         android:id="@+id/search_fab"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:background="@color/colorAccent"
-        android:src="@android:drawable/ic_search_category_default"/>
+        android:background="#000000"
+        android:src="@android:drawable/ic_menu_search"/>
 
 
 </RelativeLayout>
